syntax = "proto3";

service Hello {
  rpc SayHello (HelloRequest) returns (HelloReply);
}
message HelloRequest {
  string Name = 1;
}
message HelloReply{
  string Message = 1;
}